--- a/data-architect.html
+++ b/data-architect.html
@@ -114,7 +114,7 @@ effectively?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -149,7 +149,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -192,11 +192,11 @@ high performing applications using NOSQL DB and BigData...</p>
 model, and performance of data solutions; influence change and enforce data 
 best?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -212,7 +212,7 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -266,7 +266,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/1ayoemwddc56ecxdhtr8buh3oc'>Data Architect | GENESYS Consulting Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/genesys/job/1ayoemwddc56ecxdhtr8buh3oc'>Data Architect | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -296,7 +296,7 @@ class?...</p>
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
+<h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -373,7 +373,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -385,7 +385,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -402,7 +402,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p>Jun 20, 2019 ... Lead Cyber Security System Engineer. Annapolis ... Lead/Principal Cyber 
 Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oiVk9fwq&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBv7wKwY&jvi=oiVk9fwq,Job&jvk=Job'>Medidata Solutions Careers - Lead Engineer / Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oiVk9fwq&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBv7wKwY&jvi=oiVk9fwq,Job&jvk=Job'>Medidata Solutions Careers - Lead Engineer / Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
@@ -451,7 +451,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/big-data-architect-12727'>Big Data Architect - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/big-data-architect-12727'>Big Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
